--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "gulp": "^3.9.1",
+    "gulp-env": "^0.4.0",
+    "gulp-mocha": "^6.0.0",
     "mocha": "^5.2.0",
     "phantomjs-prebuilt": "^2.1.16",
     "sinon": "^7.0.0"
