--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node node_modules/mocha/bin/mocha test/**/*.js"
+    "test": "node node_modules/mocha/bin/mocha test/**/*.js",
+    "lint": "eslint **/*.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
