--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "~4.16.0",
     "hjs": "~0.0.6",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "supertest": "^3.3.0",
     "uuid": "^3.3.2"
   },
@@ -21,6 +21,7 @@
     "chai": "^4.2.0",
     "gulp": "^3.9.1",
     "gulp-env": "^0.4.0",
+    "gulp-istanbul": "^1.1.3",
     "gulp-mocha": "^6.0.0",
     "mocha": "^5.2.0",
     "phantomjs-prebuilt": "^2.1.16",
