--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node node_modules/mocha/bin/mocha test/**/*.js",
+    "test": "node node_modules/mocha/bin/mocha __tests__/**/*.js",
     "lint": "eslint **/*.js"
   },
   "dependencies": {
