--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "hjs": "~0.0.6",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.3.13",
     "morgan": "^1.9.1",
     "supertest": "^3.3.0",
     "uuid": "^3.3.2"
